--- a/app/views/spree/users/referral_orders.html.erb
+++ b/app/views/spree/users/referral_orders.html.erb
@@ -1,4 +1,4 @@
-<h3><%= Spree.t(:referred_users) %></h3>
+<h3><%= Spree.t(:referred_orders) %></h3>
 
 <% if @referred_records.any? %>
   <table class="table">
