--- a/app/views/spree/admin/affiliates/_form.html.erb
+++ b/app/views/spree/admin/affiliates/_form.html.erb
@@ -5,7 +5,23 @@
         <%= f.field_container :name, class: ['form-group'] do %>
           <%= f.label :name, Spree.t(:name) %>
           <%= f.text_field :name, class: 'form-control' %>
-          <%= error_message_on :user, :name %>
+          <%= f.error_message_on :name %>
+        <% end %>
+      </div>
+
+      <div data-hook="affiliate_contact">
+        <%= f.field_container :contact, class: ['form-group'] do %>
+          <%= f.label :contact, Spree.t(:contact) %>
+          <%= f.text_field :contact, class: 'form-control' %>
+          <%= f.error_message_on :contact %>
+        <% end %>
+      </div>
+
+      <div data-hook="affiliate_contact">
+        <%= f.field_container :website, class: ['form-group'] do %>
+          <%= f.label :website, Spree.t(:website) %>
+          <%= f.text_field :website, class: 'form-control' %>
+          <%= f.error_message_on :website %>
         <% end %>
       </div>
 
