--- a/app/views/spree/admin/referral_settings/edit.html.erb
+++ b/app/views/spree/admin/referral_settings/edit.html.erb
@@ -21,6 +21,18 @@
         <% end %>
       </div>
 
+      <% supported_currencies.each do |currency| %>
+        <% if Spree::StoreCreditConversionRate.find_by(currency: currency.iso_code).present? %>
+          <% rate = Spree::StoreCreditConversionRate.find_by(currency: currency.iso_code).rate %>
+        <% else %>
+          <% rate = 0 %>
+        <% end %>
+        <div class="form-group field">
+          <%= label_tag "#{currency}_conversion_rate", "#{currency} Store Credit Conversion Rate From USD" %>
+          <%= text_field_tag "#{currency}_conversion_rate", rate, type: :text_field, class: 'form-control' %>
+        </div>
+      <% end %>
+
       <div class="form-actions" data-hook="buttons">
         <%= button Spree.t('actions.update'), 'update' %>
       </div>
