--- a/app/views/spree/affiliate/confirmations/new.html.erb
+++ b/app/views/spree/affiliate/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3">
+<div class="col-md-offset-4 col-md-4">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title"><%= Spree.t(:editing_affiliate, scope: :affiliate_confirmation) %></h3>
