--- a/app/views/spree/users/_transactions.html.erb
+++ b/app/views/spree/users/_transactions.html.erb
@@ -1,28 +1,94 @@
+<% unless @user && @user.associated_partner.present? %>
+
+  <div data-hook="account_my_orders" class="account-my-orders">
+
+    <h3><%= Spree.t(:my_orders) %></h3>
+    <% if @orders.present? %>
+      <table class="table table-striped order-summary">
+        <thead class="active">
+        <tr>
+          <th class="order-number"><%= Spree::Order.human_attribute_name(:number) %></th>
+          <th class="order-date"><%= Spree.t(:date) %></th>
+          <th class="order-status"><%= Spree.t(:status) %></th>
+          <th class="order-payment-state"><%= Spree.t(:payment_state) %></th>
+          <th class="order-shipment-state"><%= Spree.t(:shipment_state) %></th>
+          <th class="order-total"><%= Spree.t(:total) %></th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @orders.each do |order| %>
+          <tr>
+            <td class="order-number"><%= link_to order.number, order_url(order) %></td>
+            <td class="order-date"><%= l order.completed_at.to_date %></td>
+            <td class="order-status"><%= Spree.t("order_state.#{order.state}").titleize %></td>
+            <td class="order-payment-state"><%= Spree.t("payment_states.#{order.payment_state}").titleize if order.payment_state %></td>
+            <td class="order-shipment-state"><%= Spree.t("shipment_states.#{order.shipment_state}").titleize if order.shipment_state %></td>
+            <td class="lead text-primary order-total"><%= order.display_total %></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    <% else %>
+      <div class="alert alert-info"><%= Spree.t(:you_have_no_orders_yet) %></div>
+    <% end %>
+    <br />
+
+  </div>
+
+<% end %>
+
 <% if @user && @user.associated_partner.present? %>
-  <h3><%= Spree.t(:my_transaction) %></h3>
+
+  <h3 class="text-left"><%= Spree.t(:my_commissions) %></h3>
+  <% @commissions  = @user.associated_partner.commissions %>
+  <% if @commissions.any? %>
+    <table class="table" id="listing_affiliates" data-hook>
+      <thead>
+        <tr data-hook="admin_affiliates_index_headers">
+          <th><%= Spree.t(:start_date) %></th>
+          <th><%= Spree.t(:end_date) %></th>
+          <th><%= Spree.t(:total_commission) %></th>
+          <th><%= Spree.t(:transactions) %></th>
+          <th><%= Spree.t(:commission_status) %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @commissions.each do |commission|%>
+          <tr id="<%= spree_dom_id commission %>" data-hook="commissions_index_rows" class="<%= cycle('odd', 'even')%>">
+            <td><%= pretty_time(commission.start_date) %></td>
+            <td><%= pretty_time(commission.end_date) %></td>
+            <td class='align-center'><%= commission.display_total %></td>
+            <td><%= commission.transactions_count.to_i %></td>
+            <td class='align-center'>
+              <% status = commission.paid? ? 'Paid' : 'unpaid' %>
+              <span class="label label-primary"><%= status %></span>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <% else %>
+    <div class="alert alert-info"><%= Spree.t(:no_commissions_yet) %></div>
+  <% end %>
+
+  <h3 class="text-left"><%= Spree.t(:affiliate_orders) %></h3>
   <% @commission_transactions  = @user.associated_partner.transactions %>
   <% if @commission_transactions.any? %>
     <table class="table" id="listing_affiliates" data-hook>
       <thead>
         <tr data-hook="admin_affiliates_index_headers">
           <th><%= Spree.t(:reference) %></th>
-          <th><%= Spree.t(:type) %></th>
           <th>
             <%= Spree.t(:date) %>
           </th>
-          <th><%= Spree.t(:amount) %></th>
+          <th><%= Spree.t(:commission_amount) %></th>
           <th><%= Spree.t(:locked) %></th>
         </tr>
       </thead>
       <tbody>
         <% @commission_transactions.each do |transaction|%>
           <tr id="<%= spree_dom_id transaction %>" data-hook="admin_transactions_index_rows" class="<%= cycle('odd', 'even')%>">
-            <% if transaction.commissionable_type.eql? 'Spree::User' %>
-              <td class='transaction_name'><%=link_to transaction.commissionable.email, '' %></td>
-            <% elsif transaction.commissionable_type.eql? 'Spree::Order' %>
-              <td class='transaction_name'><%=link_to transaction.commissionable.number, '' %></td>
-            <% end %>
-            <td class='transaction_name'><%= transaction.commissionable_type %></td>
+            <td class='transaction_name'><%=link_to transaction.commissionable.number, '' %></td>
             <td class='align-center'><%= pretty_time(transaction.created_at) %></td>
             <td class='align-center'><%= transaction.display_total %></td>
             <td class='align-center'> <%= transaction.locked? %> </td>
@@ -30,5 +96,10 @@
         <% end %>
       </tbody>
     </table>
+  <% else %>
+    <div class="alert alert-info"><%= Spree.t(:no_commission_transactions_yet) %></div>
   <% end %>
+
+  <br/>
+
 <% end %>
