--- a/app/views/spree/users/referral_details.html.erb
+++ b/app/views/spree/users/referral_details.html.erb
@@ -1,24 +1,19 @@
-<h3><%= Spree.t(:referred_users) %></h3>
+<h1><%= Spree.t(:referred_orders) %></h1>
 
 <% if @referred_records.any? %>
   <table class="table">
     <thead>
       <tr>
-        <th><%= Spree.t(:referred_user) %></th>
+        <th><%= Spree.t(:user) %></th>
         <th><%= Spree.t(:credits_received) %></th>
         <th><%= Spree.t(:date) %></th>
-        <th data-hook="referred_users_index_header_actions" class="actions"></th>
       </tr>
     </thead>
     <tbody>
       <% @referred_records.each do |referred_record| %>
         <tr id="<%= spree_dom_id referred_record %>">
-          <% if referred_record.user.present? %>
-            <td><%= referred_record.user.email %></td>
-          <% else %>
-            <td><%= referred_record.order.email %></td>
-          <% end %>
-          <td><%= referred_record.store_credit ? referred_record.store_credit.amount : '0'  %></td>
+          <td><%= referred_record.order.email %></td>
+          <td><%= referred_record.store_credit ? referred_record.store_credit.display_amount : '0'  %></td>
           <td><%= referred_record.created_at.strftime("%m-%d-%y") %></td>
         </tr>
       <% end %>
