--- a/app/views/spree/affiliate/confirmations/new.html.erb
+++ b/app/views/spree/affiliate/confirmations/new.html.erb
@@ -10,7 +10,7 @@
         <%= render partial: 'spree/shared/user_form', locals: { f: f } %>
         <%= hidden_field_tag :activation_token, @affiliate.activation_token %>
         <p>
-          <%= f.submit Spree.t(:activate), class: 'btn btn-primary' %>
+          <%= f.submit 'Activate', class: 'btn btn-primary' %>
         </p>
       <% end %>
     </div>
