--- a/app/views/spree/affiliate/confirmations/new.html.erb
+++ b/app/views/spree/affiliate/confirmations/new.html.erb
@@ -8,9 +8,11 @@
 
       <%= form_for Spree::User.new, as: @user, url: spree.affiliate_confirmations_path, method: :post do |f| %>
         <%= render partial: 'spree/shared/user_form', locals: { f: f } %>
+        Test me here
         <%= hidden_field_tag :activation_token, @affiliate.activation_token %>
         <p>
-          <%= f.submit 'Activate', class: 'btn btn-primary' %>
+          Test me here
+          <%= f.submit Spree.t(:activate), class: 'btn btn-primary' %>
         </p>
       <% end %>
     </div>
