--- a/app/views/spree/admin/affiliates/_form.html.erb
+++ b/app/views/spree/admin/affiliates/_form.html.erb
@@ -17,7 +17,15 @@
         <% end %>
       </div>
 
-      <div data-hook="affiliate_contact">
+      <div data-hook="affiliate_email">
+        <%= f.field_container :email, class: ['form-group'] do %>
+          <%= f.label :email, Spree.t(:email) %>
+          <%= f.text_field :email, class: 'form-control' %>
+          <%= f.error_message_on :email %>
+        <% end %>
+      </div>
+
+      <div data-hook="affiliate_website">
         <%= f.field_container :website, class: ['form-group'] do %>
           <%= f.label :website, Spree.t(:website) %>
           <%= f.text_field :website, class: 'form-control' %>
@@ -25,11 +33,11 @@
         <% end %>
       </div>
 
-      <div data-hook="affiliate_email">
-        <%= f.field_container :email, class: ['form-group'] do %>
-          <%= f.label :email, Spree.t(:email) %>
-          <%= f.text_field :email, class: 'form-control' %>
-          <%= f.error_message_on :email %>
+      <div data-hook="affiliate_preferred_currency">
+        <%= f.field_container :preferred_currency, class: ['form-group'] do %>
+          <%= f.label :preferred_currency, Spree.t(:preferred_currency) %>
+          <%= f.select :preferred_currency, options_for_select(supported_currencies, @affiliate.preferred_currency), {include_blank: true}, :class => 'form-control' %>
+          <%= f.error_message_on :preferred_currency %>
         <% end %>
       </div>
 
