Update wording of referral link

--- a/app/views/spree/users/_referral_links.html.erb
+++ b/app/views/spree/users/_referral_links.html.erb
@@ -1,6 +1,6 @@
 <% unless @user.associated_partner.present? %>
   <br>
-  <dt>Friend of a Friend Referral Link</dt>
+  <dt>Refer a Friend Link</dt>
   <dd>
     <form class="form-inline">
       <div class="form-group">
