Added link to program details

--- a/app/views/spree/users/_referral_links.html.erb
+++ b/app/views/spree/users/_referral_links.html.erb
@@ -8,6 +8,7 @@
         <button class="btn btn-primary btn-copylink" data-copy-coupon-code=true type="button" title='Copy referral link'><span class='glyphicon glyphicon-copy'></span></button>
       </div>
     </form>
+    <%= link_to "More information on our Refer a Friend Program", friends_path %>
   </dd>
   <br>
   <br>
