--- a/app/views/spree/admin/commissions/index.html.erb
+++ b/app/views/spree/admin/commissions/index.html.erb
@@ -83,7 +83,7 @@
           </td>
           <td data-hook="admin_commissions_index_row_actions" class="actions">
             <%= button_link_to "", transactions_admin_affiliate_path(id: @affiliate.id, q: { commission_id_eq: commission.id }), class: 'with-tip btn-sm btn-primary', icon: 'stats' %>
-          <% if !commission.paid? && commission.can_marked_paid? %>
+          <% if !commission.paid? && !commission.current_date_between_period? %>
             <%= button_link_to "", pay_admin_affiliate_commission_path(@affiliate, commission), class: 'with-tip btn-sm btn-success', icon: 'ok', method: :patch %>
           <% end %>
           </td>
